# GuiGraph

./: .gitignore  README.md  docker-compose.yml  missing-features.html  model-selector-demo.html  prd.html  prd.markdown  prd.md  start-backend.bat  start-frontend.bat  start.bat  test-cases.html  test-responsive.js  test_integration.py  test_step.py
backend/: .env.dev  .env.example  .env.prod  .env.test  .gitignore  Dockerfile  README.md  pyproject.toml  switch_env.bat  switch_env.py  test_conn.py  test_consistency.py  test_deps.py  test_gantt_api.py  test_login.py
backend/app/: __init__.py  main.py
backend/app/config/: __init__.py  logger.py  permissions.py  settings.py
backend/app/core/ai/: __init__.py  gateway.py  prompt_engine.py  usage_logger.py
backend/app/core/database/: __init__.py  base.py  session.py
backend/app/core/exceptions/: __init__.py  handlers.py
backend/app/core/middleware/: cors.py  rate_limit.py  request_log.py
backend/app/core/security/: __init__.py  crypto.py  jwt.py  wechat.py
backend/app/core/utils/: __init__.py  helpers.py  pagination.py  response.py
backend/app/modules/: __init__.py
backend/app/modules/ai/: __init__.py  (+4 more)
backend/app/shared/: __init__.py  constants.py  enums.py
backend/migrations/: 001_add_change_dependency.sql  002_real_data_and_ai_hooks.sql  003_ai_platform_phase1.sql
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py  test_auth.py  test_change.py  test_change_extended.py  test_frontend_auth.py  test_git.py  test_health.py  test_jenkins.py  test_organization.py  test_user.py
(+180 files in other folders)
